add function add file in create new product